--- a/Array-Jumper/Array-Jumper.vcxproj.filters
+++ b/Array-Jumper/Array-Jumper.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="source\UI\UIElement\UIView.cpp" />
     <ClCompile Include="source\Player\PlayerModel.cpp" />
     <ClCompile Include="source\Player\PlayerView.cpp" />
+    <ClCompile Include="source\Player\PlayerController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Main\GameService.h">
@@ -78,6 +79,7 @@
     <ClInclude Include="header\UI\UIElement\UIView.h" />
     <ClInclude Include="header\Player\PlayerModel.h" />
     <ClInclude Include="header\Player\PlayerView.h" />
+    <ClInclude Include="header\Player\PlayerController.h" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="assets\sounds\background_music.mp3" />
