box now rendering with overlay

--- a/Array-Jumper/Array-Jumper.vcxproj.filters
+++ b/Array-Jumper/Array-Jumper.vcxproj.filters
@@ -151,6 +151,9 @@
     <Image Include="assets\textures\quit_button.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="assets\textures\target.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\fonts\bubbleBobble.ttf" />
