--- a/Array-Jumper/Array-Jumper.vcxproj
+++ b/Array-Jumper/Array-Jumper.vcxproj
@@ -213,6 +213,7 @@
     <Image Include="assets\textures\outscal_logo.png" />
     <Image Include="assets\textures\play_button.png" />
     <Image Include="assets\textures\quit_button.png" />
+    <Image Include="assets\textures\target.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
